issue2550793: Wrap messages with very long lines in the web interface.
Applied to templates classic, devel, minimal and website/issues.
jinja2 and responsive should already have this through bootstrap.

--- a/share/roundup/templates/classic/html/style.css
+++ b/share/roundup/templates/classic/html/style.css
@@ -14,6 +14,10 @@ a[href], a[href]:link {
   text-decoration: none;
 }
 
+pre {
+  white-space: pre-wrap;
+}
+
 table.body {
   border: 0;
   padding: 0;
