--- a/share/roundup/templates/devel/html/style.css
+++ b/share/roundup/templates/devel/html/style.css
@@ -106,6 +106,10 @@ body
   background-color: #ffffff;
 }
 
+pre {
+  white-space: pre-wrap;
+}
+
 #search { text-align: right; }
 
 p.ok-message 
