--- a/website/issues/html/style.css
+++ b/website/issues/html/style.css
@@ -104,6 +104,10 @@ body
   background-color: #ffffff;
 }
 
+pre {
+  white-space: pre-wrap;
+}
+
 #search { text-align: right; }
 
 p.ok-message 
